--- a/functional-samples/ai.gemini-on-device/package.json
+++ b/functional-samples/ai.gemini-on-device/package.json
@@ -9,6 +9,9 @@
   },
   "keywords": [],
   "license": "Apache 2.0",
+  "dependencies": {
+    "@aibrow/extension": "^1.1.4"
+  },
   "devDependencies": {
     "dompurify": "3.1.6",
     "marked": "14.1.2",
